--- a/examples/index.html
+++ b/examples/index.html
@@ -19,17 +19,13 @@
 		<link href="../css/jquery.uls.lcd.css" rel="stylesheet">
 		<!-- demo -->
 		<link href="resources/demo.css" rel="stylesheet">
-		<!-- Libs -->
-		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<!-- Source -->
-		<script src="../src/jquery.uls.data.js"></script>
-		<script src="../src/jquery.uls.data.utils.js"></script>
-		<script src="../src/jquery.uls.lcd.js"></script>
-		<script src="../src/jquery.uls.languagefilter.js"></script>
-		<script src="../src/jquery.uls.core.js"></script>
+		<script src="../dist/uls.js"></script>
 		<script>
-			$( document ).ready( function() {
-				$( '.uls-trigger' ).uls( {
+			 document.addEventListener('DOMContentLoaded', function() {
+				new UniversalLanguageSelector(
+					document.querySelector('.uls-trigger'),
+					{
 					onSelect: function( language ) {
 						var languageName = $.uls.data.getAutonym( language );
 						$( '.uls-trigger' ).text( languageName );
